Edit css and js for correct squareDiv amount but not showing as grid

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 .holding-box {
     display: flex;
      max-width: 100vw; 
-     min-height: 100vh;
+     flex-wrap: wrap;
+     aspect-ratio: 1;
 }
 
 
@@ -13,4 +14,6 @@ border-width: thin;
 border-style: solid;
 flex: 1;
 
+
 }
+
